<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiPis</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="login_label_username">米皮号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_login">登陆</string>
    <string name="login_label_regist">注册</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_logo">东方千乙</string>

    <string name="mipis">米皮</string>
    <string name="message_tab">消息</string>
    <string name="contract_tab">联系人</string>
    <string name="video_tab">视频</string>
    <string name="title">米皮</string>
    <string name="home_settings">设置</string>

    <string name="about">关于行了</string>
    <string name="gender">性别</string>
    <string name="userId">用户号码</string>
    <string name="nickname">昵称</string>

    <string name="headicon">头像</string>
    

    <string name="friend_name">好友名称</string>
    <string name="last_message">最新消息</string>
    <string name="time_sample">2015年5月1日</string>
    <string name="prompt_new_message">提示新消息</string>

    <string name="back">返回</string>
    <string name="headicontitle">设置头像：</string>
    <string name="header">头像</string>
    <string name="set_dialog_title">信息设置</string>
    <string name="nicke_name_label">呢称:</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="current_online_label">当前在线</string>
    <string name="send_file">发送文件</string>
    <string name="send_msg">发送信息</string>
    <string name="pls_select_opr">请选择要进行的操作</string>
    <string name="call_label">语音呼叫</string>
    <string name="init_msg_count">{%1$d}</string>
    <string name="send">发送</string>
    <string name="file">文件</string>
    <string name="current_path_label">当前路径: </string>
    <string name="content_is_empty">内容为空不能发送!</string>
    <string name="waiting_for_receive_file">正在等待对方接收文件...</string>
    <string name="be_sending_file">正在发送文件</string>
    <string name="sending_file_to_you">正在给您发送文件!</string>
    <string name="accept">接收</string>
    <string name="refuse">拒绝</string>
    <string name="close">关闭</string>
    <string name="select_file_for_send">选择要发送的文件</string>
    <string name="select_path_for_save">选择用来接收文件的文件夹</string>
    <string name="data_receive_error">数据接收错误</string>
    <string name="refuse_receive_file">对方拒绝接收文件</string>
    <string name="file_send_success">文件发送成功！</string>
    <string name="file_receive_success">文件接收成功！</string>
    <string name="folder_can_not_write">文件夹不可写，无法保存文件！</string>
    <string name="ready_for_receive_file">准备接收文件</string>
    <string name="ready_for_send_file">准备发送文件</string>
    <string name="start_to_receive_file">正在接收文件</string>
    <string name="start_to_send_file">正在发送文件</string>
    <string name="talk_with">正在与{ %1$s }进行语音通话</string>
    <string name="remote_talk_closed">对方已关闭语音通话</string>
</resources>
