<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/background_rectangle"
        android:padding="15dp" >

        <TextView
            android:id="@+id/login_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username" />
        <!-- TODO: disable auto correct. -->

        <EditText
            android:id="@+id/userId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/login_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userId"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:inputType="textPassword"
            android:password="true"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pwd"
            android:layout_below="@+id/pwd"
            android:text="@string/login_remember_password" />


        <Button
            android:id="@+id/login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/checkBox"
            android:layout_below="@id/checkBox"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:onClick="onClickLogin"
            android:text="@string/login_label_login" />

        <Button
            android:id="@+id/regist"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/pwd"
            android:layout_below="@id/checkBox"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/login_label_regist" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="83dp"
        android:layout_height="86dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:textColor="#E6E6FA"
        android:textSize="50dp"
        android:text="@string/login_logo" />

</LinearLayout>